--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </div>
     <div id="btn-container">
         <button id="btn">
-            <a href="medetation/waves/waves.html">WAVES</a>
+            <a href="waves/waves.html">WAVES</a>
         </button>
         <button id="btn">
-            <a href="medetation/rain/rain.html">RAIN</a>
+            <a href="rain/rain.html">RAIN</a>
         </button>
         <button id="btn">
-            <a href="medetation/nature/nature.html">NATURE</a>
+            <a href="nature/nature.html">NATURE</a>
         </button>
     </div>
 
